configure for build

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,9 +12,9 @@ block content
   li If it does not contain a date or Unix timestamp, it returns null for those properties.
 
   h3 Example of URLs to get either the Unix or natural time format:
-  code 1.Natural time format: November 1, 2017
+  code 1.Natural time format: https://rmtimestamp.herokuapp.com/November 1, 2017
   br
-  code 2.Unix time format: 1509508800
+  code 2.Unix time format: https://rmtimestamp.herokuapp.com/1509508800
   p: This To get the Unix time format date for a calendar(natural) date visit,  #[a(href="http://www.unixtimestamp.com/index.php") Epoch Unix Time Stamp Converter]
   br
   h3 Expected output should be in JSON:
